# robjc

./: Cargo.toml  cbindgen.toml  install.sh
Rust_objc/: RustLibrary.h  RustObjcKVO-Bridging-Header.h
Rust_objc/Rust_objc/: ContentView.swift  MyClass.h  MyClass.m  MyClassRepresentableView.swift  MyClassWrapperView.swift  Rust_objcApp.swift
Rust_objc/Rust_objc.xcodeproj/: project.pbxproj
Rust_objc/Rust_objc.xcodeproj/xcuserdata/arsenijlaputko.xcuserdatad/xcschemes/: xcschememanagement.plist
objc_kvo_rust/include/: RustLibrary.h
src/: lib.rs
